# oop_04

./: .gitignore  CMakeLists.txt  README.md
include/: array.h  figure.h  hexagon.h  octagon.h  point.h  triangle.h
src/: main.cpp  test_array.cpp  test_figures.cpp
